--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -23,7 +23,7 @@
                     {% if request.user.is_authenticated %}
                     <a class="nav-link" href="/logout/">Выход</a>
                     {% else %}
-                    <a class="nav-link active" aria-current="page" href="/register/">Регистрация</a>
+                    <a class="nav-link active" aria-current="page" href="/registration/">Регистрация</a>
                     {% endif %}
                 </div>
             </div>
