--- a/app/templates/registration.html
+++ b/app/templates/registration.html
@@ -4,10 +4,10 @@
 <link rel="stylesheet" href="{% static 'css/main.css' %}">
 {% endblock %}
 {% block content %}
-<div class="login-from d-flex align-items-center py-4 bg-body-tertiary">
+<div class="registration-from d-flex align-items-center py-4 bg-body-tertiary">
     <main class="form-signin w-100 m-auto">
         <form method="post">
-            <h1 class="h3 mb-3 fw-normal">Вход</h1>
+            <h1 class="h3 mb-3 fw-normal">Регистрация</h1>
             {% if message %}
             <div class="alert alert-danger" role="alert">
                 {{ message }}
@@ -16,20 +16,17 @@
             {% csrf_token %}
             <div class="form-floating">
                 <input type="email" name="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                <label for="floatingInput">Email address</label>
+                <label for="floatingInput">Адрес электронной почты</label>
             </div>
             <div class="form-floating">
                 <input type="password" name="password" class="form-control" id="floatingPassword" placeholder="Password">
-                <label for="floatingPassword">Password</label>
+                <label for="floatingPassword">Пароль</label>
             </div>
-
-            <div class="form-check text-start my-3">
-                <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault">
-                <label class="form-check-label" for="flexCheckDefault">
-                    Remember me
-                </label>
+            <div class="form-floating">
+                <input type="password" name="confirm_password" class="form-control" id="floatingConfirmPassword" placeholder="Password">
+                <label for="floatingConfirmPassword">Подтверждение пароля</label>
             </div>
-            <button class="btn btn-primary w-100 py-2" type="submit">Войти</button>   
+            <button class="btn btn-primary w-100 py-2" type="submit">Зарегистрировать</button>   
         </form>
     </main>
 </div>
